--- a/sorMfcExEdiView/sorMfcExEdiView.vcxproj.filters
+++ b/sorMfcExEdiView/sorMfcExEdiView.vcxproj.filters
@@ -85,5 +85,8 @@
     <Image Include="res\Toolbar.bmp">
       <Filter>Resource Files</Filter>
     </Image>
+    <Image Include="res\bg.bmp">
+      <Filter>Resource Files</Filter>
+    </Image>
   </ItemGroup>
 </Project>
